@@ -1,0 +1,88 @@
+#! /bin/sh
+# Copyright (C) 2005  Free Software Foundation, Inc.
+#
+# This file is part of GNU Automake.
+#
+# GNU Automake is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+#
+# GNU Automake is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with Automake; see the file COPYING.  If not, write to
+# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+# Boston, MA 02111-1307, USA.
+
+# Make sure `make -k check' processes all directories.
+
+. ./defs || exit 1
+
+set -e
+
+cat >> configure.in << 'END'
+AC_CONFIG_FILES([dir/Makefile])
+AC_OUTPUT
+END
+
+mkdir dir
+
+cat > Makefile.am <<'END'
+SUBDIRS = dir
+TESTS = ok.sh
+END
+
+echo TESTS = fail.sh >dir/Makefile.am
+
+cat >ok.sh <<'END'
+#!/bin/sh
+:
+END
+
+cat >dir/fail.sh <<'END'
+#!/bin/sh
+exit 1
+END
+
+chmod +x ok.sh dir/fail.sh
+
+$ACLOCAL
+$AUTOCONF
+$AUTOMAKE
+./configure --prefix `pwd`/inst
+$MAKE check >stdout && exit 1
+cat stdout
+grep 'FAIL: fail.sh' stdout
+grep 'PASS: ok.sh' stdout && exit 1
+
+# The exit status of `make -k' can be anything
+# (depending on the Make implementation)
+$MAKE -k check >stdout || :
+cat stdout
+grep 'FAIL: fail.sh' stdout
+grep 'PASS: ok.sh' stdout
+
+# should also works when -k is not in first position
+$MAKE -s -k check >stdout || :
+cat stdout
+grep 'FAIL: fail.sh' stdout
+grep 'PASS: ok.sh' stdout
+
+# The rest of the test is for GNU Make.
+
+# Use --version AND -v, because SGI Make doesn't fail on --version.
+# Also grep for GNU because newer versions of FreeBSD make do
+# not complain about `--version' (they seem to silently ignore it).
+($MAKE --version -v | grep GNU) || exit 0
+
+# Try with a long-option that do not have a short option equivalent
+# (here, --no-print-directory).  That should cause all options to
+# appear verbatim in MAKEFLAGS.
+$MAKE --no-print-directory -k check >stdout || :
+cat stdout
+grep 'FAIL: fail.sh' stdout
+grep 'PASS: ok.sh' stdout
