@@ -1,3 +1,11 @@
+2005-01-16  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/am/subdirs.am ($(RECURSIVE_TARGETS), $(RECURSIVE_CLEAN_TARGETS)):
+	Process all words of $MAKEFLAGS when checking for -k.
+	* tests/check4.test: New file.
+	* tests/Makefile.am (TESTS): Add check4.test.
+	Report from Eric Blake.
+
 2005-01-13  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* m4/amversion.in (AM_AUTOMAKE_VERSION): Point users to
